Regression: Selection outline of curves in edit mode #93573

Closed
opened 2021-12-02 15:15:01 +01:00 by David Kozma · 31 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.76

Blender Version
Broken: version: 3.0.0 Release Candidate, branch: master, commit date: 2021-11-25 17:24, hash: 2fb8c6805a
Worked: (newest version of Blender that worked as expected)

Caused by b9febb54a4

Short description of error
If I add extrude or bevel to any curve, it keeps showing the object selection too!

The bug is present from sometime September. My end of August build is fine but end of September build is already buggy.

image.png

Exact steps for others to reproduce the error
Add any curves, add extrude and / or bevel to it then go to edit mode.

#93573.blend
image.png

Also: that selection outline should not look like that in editmode

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.76 **Blender Version** Broken: version: 3.0.0 Release Candidate, branch: master, commit date: 2021-11-25 17:24, hash: `2fb8c6805a` Worked: (newest version of Blender that worked as expected) Caused by b9febb54a4 **Short description of error** If I add extrude or bevel to any curve, it keeps showing the object selection too! The bug is present from sometime September. My end of August build is fine but end of September build is already buggy. ![image.png](https://archive.blender.org/developer/F12679765/image.png) **Exact steps for others to reproduce the error** Add any curves, add extrude and / or bevel to it then go to edit mode. [#93573.blend](https://archive.blender.org/developer/F12679891/T93573.blend) ![image.png](https://archive.blender.org/developer/F12679930/image.png) Also: that selection outline should not look like that in editmode
Author

Added subscriber: @DavidKozma

Added subscriber: @DavidKozma

#94742 was marked as duplicate of this issue

#94742 was marked as duplicate of this issue

#94500 was marked as duplicate of this issue

#94500 was marked as duplicate of this issue

#94300 was marked as duplicate of this issue

#94300 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm.
Objectmode lacks the line as well.

Can confirm. Objectmode lacks the line as well.
Member

Also: that selection outline should not look like that in editmode

Also: that selection outline should not look like that in editmode
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author

yes, it shouldn't be there at all : )

thanks for confirming

yes, it shouldn't be there at all : ) thanks for confirming
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member
CC @HooglyBoogly
Member

Added subscriber: @Zoni

Added subscriber: @Zoni
Member

Added subscribers: @item412, @PratikPB2123

Added subscribers: @item412, @PratikPB2123
Pratik Borhade changed title from Curve Edit mode visibility bug when any kind of geometry is generated for it to Regression: Selection outline of curves in edit mode 2021-12-31 07:29:08 +01:00
Member

Added subscriber: @viadvena

Added subscriber: @viadvena
Member

This is because the evaluated mesh from a curve object is handled as an instance internally, and instance outlines don't turn off when in edit mode. So I see two options:

  1. Turn off instance outlines when in edit mode.
  2. Handle the instances that come from other geometry component types (points from mesh objects, meshes from curve objects, etc.) differently, only disable the edit mode outlines for them.
This is because the evaluated mesh from a curve object is handled as an instance internally, and instance outlines don't turn off when in edit mode. So I see two options: 1. Turn off instance outlines when in edit mode. 2. Handle the instances that come from other geometry component types (points from mesh objects, meshes from curve objects, etc.) differently, only disable the edit mode outlines for them.
Author

Hi Hans, I posted the bug originally.
I'm surprised these are related but no, you definitely shouldn't show outlines of any selected instances (in edit mode) either.
So if it's possible please solve this bug with turning those OFF.

I'm planning to report a much more complex visibility issue regarding instances and collection instances.
This above would be at least one less issue for them.

Hi Hans, I posted the bug originally. I'm surprised these are related but no, you definitely shouldn't show outlines of any selected instances (in edit mode) either. So if it's possible please solve this bug with turning those OFF. I'm planning to report a much more complex visibility issue regarding instances and collection instances. This above would be at least one less issue for them.

Added subscriber: @brecht

Added subscriber: @brecht

Tagging high priority bugs with 3.1 so we get an overview of the work remaining for that release. If the module owner does not consider this planned for 3.1, please change the tag to 3.2 or lower the priority to normal.

Tagging high priority bugs with 3.1 so we get an overview of the work remaining for that release. If the module owner does not consider this planned for 3.1, please change the tag to 3.2 or lower the priority to normal.
Hans Goudey self-assigned this 2022-03-02 13:48:29 +01:00
Member

I'll see if I can find the overlay code that chooses where to make the outline. Due to 3.1's current state of high priority fixes only, I'll make the patch for 3.2 though, since this bug isn't new in 3.1,

I'll see if I can find the overlay code that chooses where to make the outline. Due to 3.1's current state of high priority fixes only, I'll make the patch for 3.2 though, since this bug isn't new in 3.1,
Author

Sorry Hans but just because it's not new it doesn't mean it's not high priority.
Please (really please!) try to squeeze in the fix if possible, this is a huge visibility bug and it makes working with curves much harder.
It gives me real pain to imagine more months of delay in fixing it (I've encountered it since November and reported it in December)

Also regression fixes should always be high priority. This worked perfectly before. Please don't ship a broken 3.1 in this regard.

Sorry Hans but just because it's not new it doesn't mean it's not high priority. Please (really please!) try to squeeze in the fix if possible, this is a huge visibility bug and it makes working with curves much harder. It gives me real pain to imagine more months of delay in fixing it (I've encountered it since November and reported it in December) Also regression fixes should always be high priority. This worked perfectly before. Please don't ship a broken 3.1 in this regard.

Agree with @DavidKozma , this bug is really too long living

Agree with @DavidKozma , this bug is really too long living
Member

Okay, fair enough. Since I've found a simple fix I think it's okay to target this at 3.1.

Okay, fair enough. Since I've found a simple fix I think it's okay to target this at 3.1.

This issue was referenced by 216a215ba5

This issue was referenced by 216a215ba58ac67af5e7bfa334bbcef4e812ea3f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

thank you. <3
I'll test it in the next build

thank you. <3 I'll test it in the next build
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Member

Seems like this is not solved for me. Still looks like this:
{F12894586 size=full}
Should look like this
{F12894588 size=full}

Seems like this is not solved for me. Still looks like this: {[F12894586](https://archive.blender.org/developer/F12894586/image.png) size=full} Should look like this {[F12894588](https://archive.blender.org/developer/F12894588/image.png) size=full}
Member

Oh shoot, you're right. The change doesn't affect wireframes. I'll see if that's also simple to solve.

Oh shoot, you're right. The change doesn't affect wireframes. I'll see if that's also simple to solve.
Member

I split the curve line issue to #96138

I split the curve line issue to #96138

This issue was referenced by 2b3367cdf8

This issue was referenced by 2b3367cdf8694a3e48ed5cc2be5381aabceed9c4
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:53:05 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93573
No description provided.